<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/border"
    android:clipChildren="true"
    android:padding="@dimen/main_card_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:transitionName="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            style="@style/StyleText.Title"/>

        <TextView
            android:id="@+id/desc"
            android:transitionName="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            style="@style/StyleText.Description" />
    </LinearLayout>

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        style="@style/StyleText.Description" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.shashankbhat.notesapp.view.CustomPriorityView
            android:id="@+id/customPriorityView"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="start|bottom"
            app:priority="low" />

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit_button"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_edit"
            android:layout_gravity="end"/>
    </FrameLayout>

</LinearLayout>